add docs to ignore

--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,10 @@ Intermediate/*
 
 # Cache files for the editor to use
 DerivedDataCache/*
+
+##
+## DOCUMENTATION
+##
+
+Source/html/
+Source/latex/
